# deps

./: CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: ffmpeg.yml
amf/: CMakeLists.txt  Cargo.toml  build.rs
ffmpeg/linux-armv7/lib/pkgconfig/: libavutil.pc
ffmpeg/linux-x86_64/include/libavutil/: ffversion.h
ffmpeg/linux-x86_64/lib/pkgconfig/: libswscale.pc
video_codec_sdk/: CMakeLists.txt  Cargo.toml  build.rs
vpl/: CMakeLists.txt  Cargo.toml  build.rs
